--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main class="row">
-        <div class="col-12 col-md-4">
+        <div class="col-3">
             <div class="card">
                 <h2 class="card-header">Search for a City:</h2>
                 <form id="input-form" class="card-body">
@@ -45,7 +45,7 @@
             </div>
         </div>
       
-        <div class="col-12 col-md-8">
+        <div class="col-9">
             <div class="todayWeather">
                 <h2 id="PlaceTime" class="searchLocation"></h2>
                 <h4 class="searchDetail">Temp: <span id="Temp"></span> ℉</h4>
